--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -14,4 +14,4 @@ parts:
     charm-python-packages: [setuptools, pip]
     # Install rustc and cargo as build packages because some charm's
     # dependencies need this to be built and installed from source.
-    build-packages: [rustc, cargo]
+    build-packages: [cargo, rustc, pkg-config, libffi-dev, libssl-dev]
