chore: keep public-url config option for compatibility
Since this is a breaking change, it is preferrable to keep some sort of compatibility that
allow users with existing deployments to keep running Dex even after the upgrade.
This configuration option can be removed after a deprecation notice is rolled out.

--- a/config.yaml
+++ b/config.yaml
@@ -36,3 +36,10 @@ options:
     type: string
     default: ''
     description: Static password for logging in without an external auth service
+  public-url:
+    type: string
+    default: ''
+    description: |
+      DEPRECATED - Please leave empty or use issuer-url instead. This configuration option will be removed soon.
+      It has been preserved to avoid breaking compatibility with existing deployments.
+      Publicly-accessible endpoint for cluster
