feat: add Terraform module for dex-auth
This commit adds the terraform/ directory to the root of the repository to host
the Terraform module of this charm. This follows the standard set in CC006.
For more information please also refer to canonical/argo-operators/pull/198.

Fixes #226

--- a/tox.ini
+++ b/tox.ini
@@ -79,3 +79,10 @@ commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {tox
 deps =
     -r requirements-integration.txt
 description = Run integration tests
+
+[testenv:tflint]
+allowlist_externals =
+    tflint
+commands =
+    tflint --chdir=terraform --recursive
+description = Check Terraform code against coding style standards
