--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -80,7 +80,7 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
           sudo apt-get install chromium-chromedriver
-          sg snap_microk8s -c "tox -e integration -- --model kubeflow"
+          tox -e integration -- --model kubeflow
 
       - name: Get istio gateway
         run: kubectl get gateway -A
