--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ lightkube = "^0.15.6"
 ops = "^2.17.1"
 pydantic = "^2.10.3"
 serialized-data-interface = "^0.7.0"
+owasp-logger = "^0.1.3"
 
 [tool.poetry.group.fmt]
 optional = true
